[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "persian-jalali-calendar"
dynamic = ["version"] # Reads version from __version__.py
authors = [ { name="Hamid R. Yari", email="hryarih32@gmail.com" } ]
description = "A simple and accurate Python library for the Persian Jalali calendar with no external dependencies."
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.7"
keywords = ["jalali", "persian", "calendar", "shamsi", "date", "converter"]
classifiers = [ ... ]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.dynamic]
version = { attr = "jalali_calendar.__version__" }

[project.urls]
"Homepage" = "https://github.com/hryarih32/jalali-calendar"
"Bug Tracker" = "https://github.com/hryarih32/jalali-calendar/issues"